--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,29 @@
     "version": 2,
     "builds":[
         {
-            "src":"myshop/wsgi.py", "use":"@vercel/python", 
+            "src":"myshop/wsgi.py",
+            "use":"@vercel/python",
             "config": {
-                "maxLamdasize": "15mb", "runtime": "python3.9"
-                      }
+                "maxLamdasize": "15mb", 
+                "runtime": "python3.9"
+                     }
         },
         {
             "src": "builds.sh",
             "use": "@vercel/static-build",
-            "config": 
+            "config": {
+                "distDir": "static-build"
+            }
+        }
+    ],
+    "routes": [
         {
-            "distDir": "static-build"
+            "src":"/static/(.*)",
+            "dest":"/static/$1"  
+        },
+        {
+            "src":"/(.*)",
+            "dest":"myshop/wsgi.py"
         }
-        }
-],
-            "routes": 
-            [
-            
-                {
-             "src":"/(.*)",
-             "dest":"myshop/wsgi.py"
-               }
-            ]
+    ]
 }
